--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+## Localhost
 spring.datasource.url=jdbc:mysql://localhost:3306/lab?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
+## Conoha
+#spring.datasource.url=jdbc:mysql://localhost:3306/lab?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.username=hanabi_noir
+#spring.datasource.password=culoKy_87B
+## Heroku ClearDB
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-05.cleardb.net
+#spring.datasource.username=b5c95cd5a5cbbc
+#spring.datasource.password=983a51a8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # SQLログ出力
@@ -9,3 +18,9 @@ logging.level.org.hibernate.SQL=debug
 # バインドパラメータ出力
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 logging.level.org.hibernate.type.EnumType=trace
+
+# Redis Connection
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=null
+spring.redis.database=0
